# kahzaabu

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  analyze_pairwise.py  analyze_writers_2026.py  analyze_writers_2026_v2.py  llm_pairwise.py  migrate_json_to_db.py  phase4_full_curate.py  pyproject.toml  reverse_list.py  test_system.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: external-links.yml  test.yml
data/constitution/: ConstitutionOfMaldives.txt  NOTES.md
data/registry/: maldives_public_sector.json  maldives_public_sector.yaml
docs/: ARCHITECTURE.md  DATA_CARD.md  EVAL_RESULTS.md  MAINTENANCE.md  METHODOLOGY.md  MODEL_CARD.md  TEST_REPORT.md  V2_BUILD_PLAN.md
docs/adr/: 0001-v2-architecture-overview.md  0002-polarity-taxonomy.md  0003-canonical-claim-matching.md  0004-contradiction-verdict-4way.md  0005-dual-labeling-averitec-politifact.md  0006-claimreview-jsonld.md  0007-embedding-provider-abstraction.md  0008-quality-evaluation.md  0009-oss-readiness.md  0010-reproducibility-and-observability.md  0011-public-sector-registry.md  0012-mvlaw-link-out-not-scrape.md  0013-no-in-app-auth.md  0014-hermes-ambient-hook.md  0015-article-revisions.md  0016-style-faithful-translation.md  README.md
docs/observability/: grafana-dashboard.json
docs/paper/: README.md  kahzaabu-methodology.md
hermes-plugin/: README.md  SKILL.md  __init__.py  cli.py  hooks.py  plugin.yaml  tools.py
hermes-stub/plugins/: kahzaabu
kahzaabu/: articles_fts.py  audit.py  auth.py  claimreview.py  claims_db.py  claims_enricher.py  cli.py  constitution.py  contradictions.py  curator.py  db.py  decomposer.py  digest.py  dv_compare.py  embeddings.py  eval.py  extractor.py  fact_check_enricher.py  factcheck_search.py  infographics.py  inspector.py  manifesto.py  matcher.py  mcp_server.py  metrics.py  models.py  pipeline.py  pricing.py  qna.py  qna_agentic.py  registry.py  report.py  reproducibility.py  revisions.py  scheduler.py  scraper.py  translator.py  transparency.py  truth_score.py  tui.py  (+1 more)
kahzaabu/legacy/: mcp_server.py
kahzaabu/web/: app.py  db_dep.py  limits.py  metrics.py
kahzaabu/web/api/: admin.py  articles.py  ask.py  auth.py  claimreview.py  constitution.py  contradictions.py  corrections.py  factchecks.py  freshness.py  inspect.py  manifesto.py  registry.py  reproducibility.py  stats.py  translate.py  viz.py
kahzaabu/web/static/: admin_queue.html  admin_run.html  article.html  ask.html  browse.html  compare.html  compare_detail.html  constitution.html  contradictions.html  corrections.html  disclaimer.html  factcheck.html  index.html  laws.html  lies.html  login.html  manifesto.html  manifesto_detail.html  methodology.html  translate.html
kahzaabu/web/static/css/: kahzaabu.css
kahzaabu/web/static/js/: NOTICE.md  api.js  charts.js
research/: README.md  find_outliers.py  find_subsets.py  phase0_inventory.py  phase1_extract.py  phase2_curate.py  phase3_full_extract.py
scripts/: Caddyfile  backup.sh  check-external-links.sh  check-vendor-updates.sh  ci-dry-run.sh  com.kahzaabu.daily-digest.plist  com.kahzaabu.pipeline.plist  deploy.sh  install-hermes-plugin.sh  install-hermes-skills.sh  kahzaabu-web.service  restore.sh  run_pipeline.sh  test.sh
scripts/js-verify/: .gitignore  README.md  package-lock.json  package.json  ui-smoke.mjs  verify-vendored-libs.mjs
skills/kahzaabu-fact-check/: SKILL.md
skills/kahzaabu-translate/: SKILL.md
tests/: README.md  system_check.py  test_ambient_hook.py  test_articles_api.py  test_claimreview.py  test_claims_enrichment.py  test_constitution_api.py  test_constitution_parser.py  test_contradictions.py  test_contradictions_api.py  test_cross_references.py  test_decomposer.py  test_digest.py  test_disclaimer_banner.py  test_embedding_providers.py  test_eval.py  test_fact_check_enricher.py  test_factcheck_search.py  test_hermes_plugin.py  test_host_llm_branch.py  test_json1_fallback.py  test_matcher.py  test_pricing.py  test_readme_schema_drift.py  test_registry.py  test_revisions.py  test_secrets_hygiene.py  test_slice12.py  test_system.py  test_translator.py  test_truth_score.py
tests/golden/contradictions/: 01-contradiction-pair-2.json  02-contradiction-pair-36.json  03-not_contradictory-pair-25.json  04-not_contradictory-pair-5.json  05-not_contradictory-pair-11.json
tests/golden/decomposer/: 01-claim-5524.json  02-claim-4003.json  03-claim-6976.json  04-claim-8576.json
tests/golden/extractor/: 01-article-36562.json  02-article-33168.json  03-article-32009.json  04-article-30296.json
tests/golden/matcher/: 01-same-1.json  02-same-2.json  03-same-3.json  04-different-1.json  05-different-2.json  06-different-3.json
tests/golden/truth_score/: 01-lie-high-conf.json  02-lie-max-conf.json  03-misleading.json  04-broken-deadline.json  05-supported-high.json  06-compound.json
tests/golden/verifier/: fc-002-lie.json  fc-015-credit-theft.json  fc-017-contradiction.json  fc-019-shifting-numbers.json  fc-020-shifting-numbers.json  fc-049-credit-theft.json  fc-061-contradiction.json  fc-070-credit-theft.json
